--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:allowBackup="false"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
+
         <activity
             android:name="edu.isu.diploma.PocketSphinxActivity"
             android:label="@string/app_name" >
@@ -22,8 +23,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="edu.isu.diploma.NewCommand"
-            android:label="@string/newCommand_name"/>
-        <activity android:name=".PutExtras" />
+            android:name="edu.isu.diploma.CommandList"
+            android:label="@string/newCommand_name" />
+        <activity android:name=".CreateCommand" />
     </application>
+
+
 </manifest>
