--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="false"
@@ -25,8 +26,10 @@
         </activity>
         <activity
             android:name="edu.isu.diploma.CommandList"
+            android:label="@string/commandList_name" />
+        <activity
+            android:name=".CommandCreator"
             android:label="@string/newCommand_name" />
-        <activity android:name=".CommandCreator" />
     </application>
 
 
